Repositioned the submission button on the 'Contact' page.

--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -63,6 +63,9 @@ $large-desktop-width: 1200px;
         .textHP2 {
             padding-left: 60px;
         }
+        #submitBtn {
+            right:  8em;
+        }
     }
 }
 
@@ -146,6 +149,9 @@ $large-desktop-width: 1200px;
         } // Contact Page
         .text-box-length {
             width: 650px;
+        }
+         #submitBtn {
+            right:  12em;
         }
     }
 }
@@ -233,6 +239,9 @@ $large-desktop-width: 1200px;
         } // Contact Page
         .text-box-length {
             width: 1100px;
+        }
+         #submitBtn {
+            right:  40em;
         }
     }
 }
