--- a/assets/css/components/buttons.scss
+++ b/assets/css/components/buttons.scss
@@ -24,6 +24,7 @@
     background-image: linear-gradient(#17a2b8, #01557b);
     color: white;
     border: none;
+    font-weight: 600;
 }
 
 //Donate Page
@@ -134,4 +135,6 @@
 #submitBtn {
     background-image: linear-gradient(#17a2b8, #01557b);
     color: $white;
+    position: absolute;
+    right: 8em;
 }
