--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 .hpimg-2 {
   width: 100%;
   height: 900px;
-  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.4), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.4)), url("../images/india-kids.jpg");
+  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.4), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.4)), url("../images/starvation.jpg");
   top: 40px;
   background-size: cover;
   background-attachment: fixed; }
@@ -17,14 +17,14 @@
 .hpimg-3 {
   width: 100%;
   height: 900px;
-  background-image: url("../images/african-orphan.jpg");
+  background-image: url("../images/Starving -African-Child.jpg");
   top: 40px;
   background-size: cover; }
 
 .hpimg-4 {
   width: 100%;
   height: 775px;
-  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.2), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.2)), url("../images/Starving -African-Child.jpg");
+  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.2), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.2)), url("../images/india-kids.jpg");
   top: 40px;
   background-attachment: fixed;
   background-size: cover; }
