--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -7,8 +7,8 @@ body {
 }
 
 
-.section2 {
-    height: auto;
+.top-section {
+    top: 10%;
 }
 
 .header {
@@ -21,7 +21,6 @@ body {
 }
 
 .textHP1 {
-    color: #000000;
     margin-top: 68px;
     font-weight: 600;
 }
