--- a/assets/css/helpers/mixins.scss
+++ b/assets/css/helpers/mixins.scss
@@ -8,7 +8,8 @@
     top: 40px;
     @include box(98vh,
     (linear-gradient(to right, rgba(1, 1, 1, .2), rgba(1, 1, 1, 0), rgba(1, 1, 1, .2)), url('../images/sadness-africa.jpg')));
-    background-size: 132% 100%;
+    background-position: right;
+    background-size: cover;
 }
 
 .hpimg-2 {
@@ -42,5 +43,6 @@
     top: 40px;
     @include box(97vh,
     url('../images/sadness-africa.jpg'));
-    background-size: 132% 100%;
+    background-size: cover;
+    background-position: right;
 }
