Repositioned some of the background pictures on the homepage.

--- a/assets/css/helpers/mixins.scss
+++ b/assets/css/helpers/mixins.scss
@@ -19,6 +19,7 @@
     top: 40px;
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
 }
 
 .hpimg-3 {
@@ -27,6 +28,7 @@
     url('../images/Starving -African-Child.jpg'));
     top: 40px;
     background-size: cover;
+    background-position: center;
 }
 
 .hpimg-4 {
@@ -36,6 +38,7 @@
     top: 40px;
     background-attachment: fixed;
     background-size: cover;
+    background-position: center;
 }
 
 .hpimg-5 {
