--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,16 @@
   background-image: linear-gradient(to right, rgba(1, 1, 1, 0.4), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.4)), url("../images/starvation.jpg");
   top: 40px;
   background-size: cover;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-position: center; }
 
 .hpimg-3 {
   width: 100%;
   height: 900px;
   background-image: url("../images/Starving -African-Child.jpg");
   top: 40px;
-  background-size: cover; }
+  background-size: cover;
+  background-position: center; }
 
 .hpimg-4 {
   width: 100%;
@@ -28,7 +30,8 @@
   background-image: linear-gradient(to right, rgba(1, 1, 1, 0.2), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.2)), url("../images/india-kids.jpg");
   top: 40px;
   background-attachment: fixed;
-  background-size: cover; }
+  background-size: cover;
+  background-position: center; }
 
 .hpimg-5 {
   width: 100%;
