--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -18,8 +18,9 @@ body {
 }
 
 .top-section-counter-BG {
-    background-color:  rgba(0, 0, 0, 0.3);
+    background-color:  rgba(225, 0, 0, 0.3);
     border-radius: 2%;
+    border: 2px solid;
     color: $white;
     position: relative;
     top: 32%;
