--- a/assets/css/helpers/helpers.scss
+++ b/assets/css/helpers/helpers.scss
@@ -180,7 +180,7 @@
 %asideStyles {
     display: block;
     text-align: center;
-    padding: 16px;
+    padding: 10px 5px 10px;
     transition: all 0.3s ease;
     color: $white;
     border-top-right-radius: 50px;
@@ -194,9 +194,6 @@
     @extend %asideStyles
 }
 
-.social-media-button div {
-    @extend %asideStyles
-}
 
 /*Footer Social Media Icons*/
 
