--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -48,6 +48,9 @@ $large-desktop-width: 1200px;
             color: $white;
             position: relative;
             padding-bottom: 37px;
+        }
+        .top-section-counter-BG {
+            top: 0;
         } //Statistics Texts
         .chartText {
             margin-left: 10%;
@@ -62,7 +65,8 @@ $large-desktop-width: 1200px;
             height: 110px
         } // Contact Page
         .text-box-length {
-            width: 500px;
+            width: 300px;
+            margin-left: 5px;
         }
         .textHP2 {
             padding-left: 60px;
@@ -138,6 +142,16 @@ $large-desktop-width: 1200px;
 
         .section3 {
             top: 60%;
+        }
+
+        .top-section {
+            top: 10%;
+            padding: 0;
+        }
+
+        .top-section-counter-BG {
+            top: 68%;
+            right: 20px;
         } //Statistics Page
         .chartText {
             text-align: center;
@@ -152,19 +166,21 @@ $large-desktop-width: 1200px;
             color: $black;
         } // Contact Page
         .text-box-length {
-            width: 650px;
+            width: 400px;
         }
          #submitBtn {
             right:  12em;
         }
-
-        .top-section {
-            top: 26%;
-            padding: 0;
+        .contactMeBulletPoints {
+            border: 2px solid;
+            box-shadow: -10px 10px;
+            height: 300px;
+            top: 3em;
+            background-color: rgba(255, 250, 250, 0.7);
         }
-        .top-section-counter-BG {
-            top: 68%;
-            right: 20px;
+        .contact-list {
+            list-style: square;
+            padding-left: 40px;
         }
     }
 }
@@ -174,8 +190,12 @@ $large-desktop-width: 1200px;
 @mixin desktop {
     @media(min-width: $desktop-width) {
         .top-section-counter-BG {
-            top: 32%;
+            top: 5%;
             left: 0;
+        }
+
+        .top-section {
+            top: 4%;
         }
     }
 }
@@ -259,7 +279,7 @@ $large-desktop-width: 1200px;
             padding-right: 50px;
         } // Contact Page
         .text-box-length {
-            width: 1100px;
+            width: 780px;
         }
          #submitBtn {
             right:  40em;
