--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -19,6 +19,16 @@
     padding-top: 100px;
 }
 
+/*.contactBackground {
+    background-color: $BodyBlue;
+    width: 100%;
+    height: 45vh;
+    position: absolute;
+    z-index: -1;
+    bottom: 0;
+    overflow: hidden;
+}*/
+
 .contactBG {
     width: 100%;
     height: 100vh;
@@ -29,4 +39,13 @@
     background-position: center;
     background-size: cover;
     background-image: url('../images/Contact-Image/Hands-Charity.png');
+}
+
+.contact-list {
+    list-style: none;
+    padding: 0px;
+}
+
+.header2 {
+    font-weight: 600;
 }
