--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap');
+
+
 .contactForm {
     position: relative;
 }
