--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -13,6 +13,11 @@ body {
     font-size: 27px;
 }
 
+.blue-seconds {
+    color: blue;
+    font-weight: 600;
+}
+
 .top-section {
     /*top: 10%;*/
     top: 0;
