--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap");
 .hpimg-1 {
   width: 100%;
   top: 40px;
@@ -390,6 +394,10 @@ body {
   font-weight: 600;
   font-size: 27px; }
 
+.blue-seconds {
+  color: blue;
+  font-weight: 600; }
+
 .top-section {
   /*top: 10%;*/
   top: 0; }
@@ -452,8 +460,45 @@ body {
   margin-top: 90px;
   color: #FFFFFF; }
 
+.death-seconds {
+  text-align: center;
+  color: #FFFFFF;
+  font-weight: 600; }
+
 .graph-color {
   color: #FFFFFF; }
+
+#statsBox {
+  width: 100%;
+  height: 200px;
+  background-image: url(../images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative; }
+
+.theCounters {
+  color: white;
+  text-align: center;
+  position: absolute;
+  display: flex; }
+
+#counterStats {
+  padding: 40px;
+  font-size: 18px; }
+
+#deathStats {
+  padding: 5px;
+  font-size: 18px; }
+
+.red-count-statistics {
+  color: red;
+  font-weight: 600;
+  font-size: 27px; }
+
+.blue-seconds-statistics {
+  color: blue;
+  font-weight: 600; }
 
 #map {
   height: 100vh;
@@ -640,6 +685,15 @@ body {
   .graph-color {
     color: #000000; }
 
+  #statsBox {
+    height: 300px; }
+
+  #counterStats {
+    font-size: 27px; }
+
+  #deathStats {
+    font-size: 27px; }
+
   .text-box-length {
     width: 400px; }
 
@@ -724,6 +778,21 @@ body {
 
   #statistics-article {
     padding-right: 50px; }
+
+  .theCounters {
+    top: 0%; }
+
+  #statsBox {
+    height: 600px; }
+
+  #counterStats {
+    font-size: 62px; }
+
+  #deathStats {
+    font-size: 62px; }
+
+  .red-count-statistics {
+    font-size: 65px; }
 
   .text-box-length {
     width: 780px; }
