--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -12,7 +12,7 @@ $red: #FE7979;
 
 $navbarBlue: #007bff;
 
-$BodyBlue: #2098d1;
+$BodyBlue: #f0fbff;
 
 //Social Media Buttons
 $sideCalculatorHover: rgba(102,51,153, .8);
