--- a/assets/css/pages/charities.scss
+++ b/assets/css/pages/charities.scss
@@ -7,7 +7,7 @@
 
 .charitiesH1 {
     padding: 28px 0;
-    color: white;
+    color: $black;
 }
 
 #AsiaAfricaSection {
@@ -50,6 +50,6 @@
 }
 
 .donatePageTextColor {
-    color: $white;
+    color: $black;
 }
 
