--- a/assets/css/pages/statistics.scss
+++ b/assets/css/pages/statistics.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap');
 
 .chartText {
-    color: $white;
+    color: $black;
 }
 
 .no-content-BG {
@@ -11,7 +11,7 @@
 .statisticsHeading {
     margin-left: 10px;
     margin-top: 90px;
-    color: $white;
+    color: $black;
 }
 
 .death-seconds {
@@ -21,7 +21,7 @@
 }
 
 .graph-color {
-    color: $white;
+    color: $black;
 }
 
 #statsBox {
@@ -35,7 +35,7 @@
 }
 
 .theCounters {
-    color: white;
+    color: $white;
     text-align: center;
     position: absolute;
     display: flex;
