--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,8 +142,8 @@
   text-align: center; }
 
 .donateButtonStyleHP {
-  height: 70px;
-  font-size: 35px;
+  height: 41px;
+  font-size: 20px;
   border: solid #FFF;
   border-radius: 10px;
   transition: 0.2s;
@@ -344,11 +344,11 @@
   vertical-align: middle; }
 
 #bodyColor {
-  background-color: #2098d1; }
+  background-color: #f0fbff; }
 
 .charitiesH1 {
   padding: 28px 0;
-  color: white; }
+  color: #000000; }
 
 #AsiaAfricaSection {
   padding: 5% 0; }
@@ -382,7 +382,7 @@
   margin-bottom: 10px; }
 
 .donatePageTextColor {
-  color: #FFFFFF; }
+  color: #000000; }
 
 body {
   padding: 0;
@@ -400,7 +400,8 @@ body {
 
 .top-section {
   /*top: 10%;*/
-  top: 0; }
+  top: 0;
+  padding: 1em 0.5em 0; }
 
 .top-section-counter-BG {
   background-color: rgba(225, 0, 0, 0.3);
@@ -408,7 +409,7 @@ body {
   border: 2px solid;
   color: #FFFFFF;
   position: relative;
-  top: -15%;
+  top: -9%;
   /*top: 32%;*/ }
 
 .header {
@@ -428,6 +429,11 @@ body {
   font-weight: 600; }
 
 .text2 {
+  font-size: 1em;
+  font-weight: 600; }
+
+.text2 {
+  font-size: 1em;
   font-weight: 600; }
 
 .textGDP {
@@ -450,7 +456,7 @@ body {
   text-decoration: underline; }
 
 .chartText {
-  color: #FFFFFF; }
+  color: #000000; }
 
 .no-content-BG {
   background: #FFFFFF; }
@@ -458,7 +464,7 @@ body {
 .statisticsHeading {
   margin-left: 10px;
   margin-top: 90px;
-  color: #FFFFFF; }
+  color: #000000; }
 
 .death-seconds {
   text-align: center;
@@ -466,7 +472,7 @@ body {
   font-weight: 600; }
 
 .graph-color {
-  color: #FFFFFF; }
+  color: #000000; }
 
 #statsBox {
   width: 100%;
@@ -478,7 +484,7 @@ body {
   position: relative; }
 
 .theCounters {
-  color: white;
+  color: #FFFFFF;
   text-align: center;
   position: absolute;
   display: flex; }
@@ -508,7 +514,7 @@ body {
 
 .mapInstruction {
   padding: 10% 0;
-  color: #FFFFFF; }
+  color: #000000; }
 
 .contactForm {
   position: relative; }
@@ -558,6 +564,7 @@ body {
   .textHP1 {
     font-size: 26px;
     margin-left: 36px;
+    margin-top: 36px;
     padding-left: 10px; }
 
   .top-section {
@@ -573,6 +580,9 @@ body {
     color: #FFFFFF;
     position: relative;
     top: 56px; }
+
+  .text {
+    font-size: 26px; }
 
   .text2 {
     font-size: 26px; }
@@ -636,6 +646,9 @@ body {
     padding-right: 10px;
     position: relative; }
 
+  .text2 {
+    font-size: 26px; }
+
   .section1 {
     bottom: 20px;
     padding-top: 10%;
@@ -654,9 +667,6 @@ body {
     top: 156px;
     padding-bottom: 197px; }
 
-  .textHP1 {
-    margin-top: 0; }
-
   .section {
     top: 40%; }
 
@@ -669,7 +679,7 @@ body {
 
   .top-section {
     top: 10%;
-    padding: 0; }
+    padding-top: 3%; }
 
   .top-section-counter-BG {
     top: 68%;
@@ -732,13 +742,13 @@ body {
     height: 1000px; }
 
   .text {
-    font-size: 30px; }
+    font-size: 28px; }
 
   .text2 {
-    font-size: 2em; }
+    font-size: 28px; }
 
   .textGDP {
-    font-size: 2em; }
+    font-size: 28px; }
 
   .textHP1 {
     padding-left: 40px;
