--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -46,6 +46,11 @@ $large-desktop-width: 1200px;
             color: $white;
         }
 
+        .donateButtonStyleHP {
+            font-size: 25px;
+            height: 49px;
+        }
+
         .MotherTeresaQuote {
             top: 75px;
             font-size: 20px;
