--- a/assets/css/helpers/media-queries.scss
+++ b/assets/css/helpers/media-queries.scss
@@ -170,6 +170,7 @@ $large-desktop-width: 1200px;
         .chartStyling {
             background-color: $white;
             margin: 7% 0;
+            padding: 40px 20px;
         }
 
         .graph-color {
