--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -7,8 +7,13 @@ $darkerGreen: #11fe00;
 $green: #8ffe00;
 $black: #000000;
 $lightYellow: #FEF9B4;
+$noticeYellow: rgb(255, 255, 138);
 $grey: rgb(224,224,224);
 $red: #FE7979;
+$buttonBG: linear-gradient(#17a2b8, #01557b);
+$buttonHoverBG:  linear-gradient(#1ebfd8, #0075ac);
+
+$counterBG: rgba(225, 0, 0, 0.3);
 
 $navbarBlue: #007bff;
 
