--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,18 +63,10 @@
   position: relative;
   color: white;
   background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 2%;
   height: auto; }
 
 .section, .section2, .section3 {
   top: 20%; }
-
-#hptextimg-1, #hptextimg-4, .MotherTeresaImg {
-  left: 25%;
-  background-size: cover;
-  position: relative;
-  background-position: center;
-  border-radius: 3%; }
 
 /*Charity Page*/
 .charityAsiaPic1, .charityAfricaPic, .charityAsiaPic2, .charityEuropePic1, .charitySAPic, .charityEuropePic2, .charityRedCrossPic, .disasterReliefRedCrossPic {
@@ -144,25 +136,25 @@
 .donateButtonStyleHP {
   height: 41px;
   font-size: 20px;
-  border: solid #FFF;
+  border: none;
   border-radius: 10px;
-  transition: 0.2s;
   background-image: linear-gradient(#17a2b8, #01557b);
   color: #FFFFFF;
-  border: none;
   margin: 5% 0;
   font-weight: 600; }
 
 .donateButtonStyleHP:hover {
-  opacity: 1;
-  border: solid #FFF;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  background-image: linear-gradient(#1ebfd8, #0075ac); }
 
 .readBtn {
   background-image: linear-gradient(#17a2b8, #01557b);
   color: white;
   border: none;
   font-weight: 600; }
+
+.readBtn:hover {
+  background-image: linear-gradient(#1ebfd8, #0075ac); }
 
 .charity-collapse {
   width: 100%;
@@ -399,18 +391,15 @@ body {
   font-weight: 600; }
 
 .top-section {
-  /*top: 10%;*/
   top: 0;
   padding: 1em 0.5em 0; }
 
 .top-section-counter-BG {
   background-color: rgba(225, 0, 0, 0.3);
-  border-radius: 2%;
   border: 2px solid;
   color: #FFFFFF;
   position: relative;
-  top: -9%;
-  /*top: 32%;*/ }
+  top: -9%; }
 
 .header {
   font-weight: 800; }
@@ -470,6 +459,17 @@ body {
   text-align: center;
   color: #FFFFFF;
   font-weight: 600; }
+
+.row-flex {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  background-color: #ffff8a;
+  font-size: 20px;
+  font-weight: 700; }
+
+.notice-text {
+  margin: 0; }
 
 .graph-color {
   color: #000000; }
@@ -532,15 +532,6 @@ body {
 .contactHeading {
   padding-top: 100px; }
 
-/*.contactBackground {
-    background-color: $BodyBlue;
-    width: 100%;
-    height: 45vh;
-    position: absolute;
-    z-index: -1;
-    bottom: 0;
-    overflow: hidden;
-}*/
 .contactBG {
   width: 100%;
   height: 100vh;
@@ -694,7 +685,8 @@ body {
 
   .chartStyling {
     background-color: #FFFFFF;
-    margin: 7% 0; }
+    margin: 7% 0;
+    padding: 40px 20px; }
 
   .graph-color {
     color: #000000; }
