--- a/assets/css/helpers/mixins.scss
+++ b/assets/css/helpers/mixins.scss
@@ -10,6 +10,7 @@
     (linear-gradient(to right, rgba(1, 1, 1, .2), rgba(1, 1, 1, 0), rgba(1, 1, 1, .2)), url('../images/sadness-africa.jpg')));
     background-position: right;
     background-size: cover;
+    
 }
 
 .hpimg-2 {
@@ -17,7 +18,6 @@
     @include box (900px,
     (linear-gradient(to right, rgba(1, 1, 1, .4), rgba(1, 1, 1, 0), rgba(1, 1, 1, .4)), url('../images/starvation.jpg')));
     top: 40px;
-    background-size: cover;
     background-attachment: fixed;
     background-position: center;
 }
@@ -27,8 +27,9 @@
     @include box(900px,
     url('../images/Starving -African-Child.jpg'));
     top: 40px;
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
+    background-size: cover;
 }
 
 .hpimg-4 {
@@ -37,7 +38,6 @@
     (linear-gradient(to right, rgba(1, 1, 1, .2), rgba(1, 1, 1, 0), rgba(1, 1, 1, .2)), url('../images/india-kids.jpg')));
     top: 40px;
     background-attachment: fixed;
-    background-size: cover;
     background-position: center;
 }
 
@@ -46,6 +46,5 @@
     top: 40px;
     @include box(97vh,
     url('../images/sadness-africa.jpg'));
-    background-size: cover;
     background-position: right;
 }
