--- a/assets/css/helpers/helpers.scss
+++ b/assets/css/helpers/helpers.scss
@@ -5,6 +5,7 @@
     background: {
         repeat: no-repeat;
         size: cover;
+        attachment: fixed;
     }
     display: flex;
     justify-content: left;
